# brainfuckr

./: Cargo.toml  LICENCE  README.md
src/: bf.rs  cli.rs  cmds.rs  lib.rs  main.rs
tests/: array_len.b  integration.rs  io.b  obscure.b  unbalanced_left.b  unbalanced_right.b
tests/test_files/: array_len.b  hello_world.b  io.b  unbalanced_left.b  unbalanced_right.b
