[package]
name = "brainfuckr"
description = "Yet another brainfuck interpreter written in Rust"
license = "MIT"
license-file = "LICENCE"
documentation = "https://docs.rs/brainfuckr/latest/brainfuckr"
homepage = "https://github.com/omgitsaheadcrab/brainfuckr"
repository = "https://github.com/omgitsaheadcrab/brainfuckr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.12"
clap = { version = "4.1.1", features = ["derive"] }
test-files = "0.1.0"
