[package]
name = "brainfuckr"
description = "Yet another brainfuck interpreter written in Rust"
license = "MIT"
documentation = "https://docs.rs/brainfuckr/latest/brainfuckr"
homepage = "https://github.com/omgitsaheadcrab/brainfuckr"
repository = "https://github.com/omgitsaheadcrab/brainfuckr"
version = "0.1.2"
edition = "2021"

[lib]
name = "brainfuckr"
path = "src/lib.rs"

[[bin]]
name = "brainfuckr"
path = "src/main.rs"

[dependencies]
assert_cmd = "2.0.12"
clap = { version = "4.1.1", features = ["derive"] }
test-files = "0.1.0"
